remove fiesta, add FUEL and ORB_SLAM2_CUDA

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,7 @@
 [submodule "flame_ros"]
 	path = flame_ros
 	url = https://github.com/danigr99727/flame_ros
-[submodule "fiesta"]
-	path = fiesta
-	url = https://github.com/danigr99727/fiesta
+
+[submodule "FUEL"]
+	path = FUEL
+	url = https://github.com/danigr99727/FUEL
