--- a/orb_slam2_cuda/package.xml
+++ b/orb_slam2_cuda/package.xml
@@ -26,4 +26,11 @@
     <exec_depend>image_transport</exec_depend>
     <exec_depend>cv_bridge_4</exec_depend>
 
+    <build_depend>nodelet</build_depend>
+    <exec_depend>nodelet</exec_depend>
+
+    <export>
+        <nodelet plugin="${prefix}/nodelet_plugins.xml" />
+    </export>
+
 </package>
