--- a/src/my_pipeline/package.xml
+++ b/src/my_pipeline/package.xml
@@ -14,9 +14,9 @@
     <build_depend>orb_slam2_cuda</build_depend>
     <build_depend>flame_ros</build_depend>
     <build_depend>plan_env</build_depend>
+    <build_depend>airsim_ros_pkgs</build_depend>
 
     <exec_depend>airsim_ros_pkgs</exec_depend>
-    <exec_depend>my_airsim_pkgs</exec_depend>
 
 
 </package>
