--- a/src/my_pipeline/CMakeLists.txt
+++ b/src/my_pipeline/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.1)
 project(my_pipeline LANGUAGES CXX C)
 
+set(CMAKE_BUILD_TYPE "Release")
+
+
 #################
 # Find packages #
 #################
