--- a/src/my_pipeline/package.xml
+++ b/src/my_pipeline/package.xml
@@ -15,7 +15,7 @@
     <build_depend>flame_ros</build_depend>
     <build_depend>plan_env</build_depend>
     <build_depend>airsim_ros_pkgs</build_depend>
-
+    <exec_depend>graph_rviz_plugin</exec_depend>
     <exec_depend>airsim_ros_pkgs</exec_depend>
 
 
