--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-
 [submodule "flame_ros"]
 	path = src/flame_ros
 	url = https://github.com/danigr99727/flame_ros
@@ -26,9 +25,18 @@
 [submodule "src/graph_rviz_plugin"]
 	path = src/graph_rviz_plugin
 	url = https://gitlab.com/InstitutMaupertuis/graph_rviz_plugin
+
 [submodule "src/gscam"]
 	path = src/gscam
 	url = https://github.com/ros-drivers/gscam
+
 [submodule "src/image_pipeline"]
 	path = src/image_pipeline
 	url = https://github.com/ros-perception/image_pipeline
+
+[submodule "third_party/opencv_contrib"]
+	path = third_party/opencv_contrib
+	url = https://github.com/opencv/opencv_contrib
+[submodule "third_party/opencv"]
+	path = third_party/opencv
+	url = https://github.com/opencv/opencv
